# M210-Minecraft-Server

./: .gitignore copy  README.md  docker-compose.yml  sql_pw.txt
app/: Cargo.toml  Dockerfile
app/src/: main.rs
app/views/: template.hbs
minecraft/: Dockerfile  server.properties
