[package]
name = "app"
version = "0.1.0"
edition = "2021"
include = ["static", "views"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
simple-websockets = "0.1"
handlebars = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3", features = ["v4", "serde"] }
